<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddMovieFragment">

    <ImageView
        android:id="@+id/add_movie_image_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/select_image" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/movie_name_edit_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="@string/app_name"
        android:hint="@string/movie_name"
        android:inputType="text" />


    <Button
        android:id="@+id/save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="55dp"
        android:text="@string/save" />


    <Button
        android:id="@+id/update_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:text="@string/update" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_item"
        android:clickable="true"
        android:focusable="true"
        android:layout_gravity="end"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="60dp"
        android:text="@string/delete"
        android:textColor="@color/pink"
        android:textSize="22sp" />
</LinearLayout>